# huggingface-transformer-chatbot

./: .gitignore  README.md
backend/: main.py  model.py  pyproject.toml  rag.py  requirement.txt
backend/chroma_db/: chroma.sqlite3
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
