[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "pypdf>=6.12.1",
    "python-multipart>=0.0.29",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "uvicorn>=0.48.0",
]
